crates/alder-parse/src/expression/snapshots/alder_parse__expression__tuple__tests__error_empty_comma.snap
---
source: crates/alder-parse/src/expression/tuple.rs
description: "Code:\n\n(,)"
---
Tuple(
    IndentExpr1(
        1,
        2,
    ),
    1,
    1,
)
