crates/alder-parse/src/expression/snapshots/alder_parse__expression__tuple__tests__error_trailing_comma.snap
---
source: crates/alder-parse/src/expression/tuple.rs
description: "Code:\n\n(1, 2,)"
---
Tuple(
    Expr(
        Start(
            1,
            7,
        ),
        1,
        7,
    ),
    1,
    1,
)
