crates/alder-parse/src/expression/snapshots/alder_parse__expression__tuple__tests__unit.snap
---
source: crates/alder-parse/src/expression/tuple.rs
description: "Code:\n\n()"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 3,
        },
    },
    value: Unit,
}
